feat(86): add sort on feign client so plugins can properly use optimization